--- a/style.css
+++ b/style.css
@@ -73,6 +73,8 @@ canvas{
   }
   .nav{
     left: 4.5vw;
+    top: 0;
+    margin: 2px
 
 
 
@@ -80,12 +82,14 @@ canvas{
 
   h1{
     font-size: 1rem;
-    top:0.5rem;
+    top:0;
+    margin: 3px;
     right: 0.5rem;
     
     
   }
   p{
     font-size: 0.8rem;
+    top: 1.3rem;
   }
 }
