--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box; 
+}
+
 html, body {
     margin: 0;
     background-color: rgb(184, 186, 224);
@@ -26,7 +30,7 @@ h1 {
   position: absolute;
   margin: 0;
   top: 0;
-  right: 5px;
+  right: 1rem;
 
   color: black;
   text-shadow: 0 0 4px white;
@@ -36,7 +40,7 @@ p {
   position: absolute;
   margin: 0;
   top: 35px;
-  right: 5px;
+  right: 1.1rem;
   color:black;
 
 }
@@ -54,15 +58,55 @@ p {
   cursor: none;
 }
 
-
 canvas{
   width: 100%;
   height: 100%;
-  
 }
-* {
-  box-sizing: border-box; 
+.start{
+  background-color: #d43a3a;
+  font-size: 1.5rem;
+  padding: 1rem;
+  position: absolute; 
+  left: 0; 
+  right: 0; 
+  margin-left: auto; 
+  margin-right: auto; 
+  width: 200px;
+  z-index: 1;
+  border: 2px white solid;
+  border-radius: 10px;
+  color: white;
 }
+.reset{
+  background-color: green;
+  font-size: 1.3rem;
+  padding: 0.5rem 1rem;
+  position: absolute; 
+  left: 7.5vw; 
+  top: 1vh; 
+  width: auto;
+  z-index: 1;
+  border: 2px white solid;
+  border-radius: 10px;
+  color: white;
+  visibility: hidden;
+}
+
+
+button :hover
+{
+  background-color: rgb(14, 14, 65);
+}
+
+.hidden
+{
+  visibility: hidden;
+}
+.show
+{
+  visibility: visible;
+}
+
 
 @media only  screen and (max-width: 560px){
   .container {
@@ -71,13 +115,11 @@ canvas{
     height: 90%;
     top: 3vh;
   }
-  .nav{
-    left: 4.5vw;
-    top: 0;
-    margin: 2px
 
-
-
+  .start
+  {
+    font-size: 1.5rem;
+    width: 30%;
   }
 
   h1{
