--- a/style.css
+++ b/style.css
@@ -251,8 +251,8 @@ input[type=number]::-webkit-outer-spin-button {
   }
   .hitpoint{
     font-size: 0.8rem;
-    top: 0.2rem;
-    left: 66vw;
+    top:0;
+    left: 82vw;
   }
   .timer
   {
